Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16984

Assertion `dec' failed in Dec_ptr::cmp

Details

    Description

      set sql_mode='';
       
      CREATE TABLE t1 (dc decimal(10));
      INSERT INTO t1 VALUES (0000000),(NULL);
       
      SELECT 1 FROM t1 GROUP BY 'm' <=> dc;
      

       10.4 befc09f00263d5375b2bb2ea0
       
      mysqld: 10.4/sql/sql_type.h:138: int Dec_ptr::cmp(const my_decimal*) const: Assertion `dec' failed.
      180814 14:12:26 [ERROR] mysqld got signal 6 ;
       
      stdlib/abort.c:91(__GI_abort)[0x7f9b4374802a]
      assert/assert.c:92(__assert_fail_base)[0x7f9b4373ebd7]
      /lib/x86_64-linux-gnu/libc.so.6(+0x2dc82)[0x7f9b4373ec82]
      sql/sql_type.h:139(Dec_ptr::cmp(my_decimal const*) const)[0x559548eea76a]
      sql/sql_type.h:144(Dec_ptr::cmp(Dec_ptr const&) const)[0x559548eea7eb]
      sql/item_cmpfunc.cc:828(Arg_comparator::compare_e_decimal())[0x55954972a099]
      sql/item_cmpfunc.h:102(Arg_comparator::compare())[0x5595497627bb]
      sql/item_cmpfunc.cc:1718(Item_func_equal::val_int())[0x559549734062]
      sql/item.cc:6608(Item::save_int_in_field(Field*, bool))[0x5595496ef03d]
      sql/sql_type.cc:3112(Type_handler_int_result::Item_save_in_field(Item*, Field*, bool) const)[0x559549422b12]
      sql/item.cc:6618(Item::save_in_field(Field*, bool))[0x5595496ef219]
      sql/item.h:3041(Item_result_field::save_in_result_field(bool))[0x559548e8ab6c]
      sql/sql_select.cc:24220(copy_funcs(Item**, THD const*))[0x5595490edafb]
      sql/sql_select.cc:20662(end_write(JOIN*, st_join_table*, bool))[0x5595490d65cd]
      sql/sql_select.cc:27191(AGGR_OP::put_record(bool))[0x559549103714]
      sql/sql_select.h:1017(AGGR_OP::put_record())[0x55954910f57b]
      sql/sql_select.cc:18972(sub_select_postjoin_aggr(JOIN*, st_join_table*, bool))[0x5595490cac8e]
      sql/sql_select.cc:19470(evaluate_join_record(JOIN*, st_join_table*, int))[0x5595490cce64]
      sql/sql_select.cc:19289(sub_select(JOIN*, st_join_table*, bool))[0x5595490cc0e6]
      sql/sql_select.cc:18790(do_select(JOIN*, Procedure*))[0x5595490c9f07]
      sql/sql_select.cc:4076(JOIN::exec_inner())[0x55954906943b]
      sql/sql_select.cc:3871(JOIN::exec())[0x559549067180]
      sql/sql_select.cc:4277(mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x55954906a50b]
      sql/sql_select.cc:382(handle_select(THD*, LEX*, select_result*, unsigned long))[0x559549044c37]
      sql/sql_parse.cc:6546(execute_sqlcom_select(THD*, TABLE_LIST*))[0x559548fca861]
      sql/sql_parse.cc:3768(mysql_execute_command(THD*))[0x559548fb9074]
      sql/sql_parse.cc:8064(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x559548fd2ca5]
      sql/sql_parse.cc:1849(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x559548faddcb]
      sql/sql_parse.cc:1392(do_command(THD*))[0x559548faaf63]
      sql/sql_connect.cc:1402(do_handle_one_connection(CONNECT*))[0x5595492fb768]
      sql/sql_connect.cc:1309(handle_one_connection)[0x5595492fb145]
      perfschema/pfs.cc:1864(pfs_spawn_thread)[0x55954a61e513]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x76ba)[0x7f9b443836ba]
      x86_64/clone.S:111(clone)[0x7f9b4381841d]
      

      Attachments

        Activity

          There are no comments yet on this issue.

          People

            bar Alexander Barkov
            alice Alice Sherepa
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.