MDEV-16984 Assertion `dec' failed in Dec_ptr::cmp

Fixing the bug (in the code from MDEV-16910)